--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
             <div class="event_img"><img src="./img/minchobbang-hangsa-img.jpg" alt="민초빵 행사"></div>
         </div>
         <div class="event_chamga">
-            <div class="goodmenutitle">
-                <object data="./img/find bread start icon.svg" type="image/svg+xml"></object>
+            <div class="event_chamga_htwo">
                 <h2>삼행시 참여작 목록</h2>
             </div>
             <div class="event_chamga_set">
@@ -98,7 +97,6 @@
     <!-- 인기 제품 -->
     <div class="goodmenu">
         <div class="goodmenutitle">
-            <object data="./img/find bread start icon.svg" type="image/svg+xml"></object>
             <h2>인기 제품</h2>
         </div>
         <div class="goodmenulist">
@@ -138,8 +136,7 @@
     </div>
 
     <div class="sharpfindbread">
-        <div class="goodmenutitle">
-            <object data="./img/find bread start icon.svg" type="image/svg+xml"></object>
+        <div class="sharpfindbread_title">
             <h2>#findbread</h2>
         </div>
         <div class="sharpfindbreadlist">
